<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_opening"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:src="@drawable/help_1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_1"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/help_2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_2"
            />
        <LinearLayout
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:background="#9C27B0"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/subject_law"
                android:contentDescription="@string/subject_icon"/>
            <ImageView
                android:background="#F70900"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/subject_sport"
                android:contentDescription="@string/subject_icon"/>
            <ImageView
                android:background="#7100F7"
                android:padding="4dp"
                android:layout_margin="8dp"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/subject_physics"
                android:contentDescription="@string/subject_icon"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_3"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/help_3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_4"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/help_4" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_5"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/help_5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_6"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/help_6" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_7"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/help_7" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_8"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/help_8" />
    </LinearLayout>
</ScrollView>